--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "string_view": "cpp",
         "ranges": "cpp",
         "span": "cpp"
-    }
+    },
+    "files.maxMemoryForLargeFilesMB": 65536
 }
