--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 .vscode/
 .vscode/c_cpp_properties.json
 .vscode/launch.json
